# tenantguard

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/configs/: tenantguard-demo-write.yml  tenantguard-demo.yml  tenantguard.basic.yml  tenantguard.cookie-auth.yml
examples/reports/: demo-report.example.html  demo-report.example.md
examples/vulnerable-fastapi-app/: .env.demo  README.md  docker-compose.yml
examples/vulnerable-fastapi-app/app/: __init__.py  auth.py  data.py  main.py  models.py  permissions.py
tenantguard/: __init__.py  cli.py  client.py  config.py  models.py  results.py  runner.py  safety.py  templating.py
tenantguard/checks/: __init__.py  assertions.py  severity.py
tenantguard/reporters/: html_reporter.py  json_reporter.py  markdown_reporter.py
tests/: conftest.py  test_assertions.py  test_cli.py  test_client.py  test_config.py  test_demo_app.py  test_demo_e2e.py  test_demo_write_e2e.py  test_reporters.py  test_runner.py  test_safety.py  test_tags.py
