[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tenantguard"
version = "0.1.0"
description = "Authorization regression tests for multi-tenant SaaS applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Krzysztof Jaronski" }]
keywords = [
  "saas",
  "security",
  "authorization",
  "multi-tenant",
  "idor",
  "api-security",
  "devsecops",
  "testing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "jinja2>=3.1.0",
  "jsonpath-ng>=1.6.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
demo = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-PyYAML",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]

[project.scripts]
tenantguard = "tenantguard.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["tenantguard*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["jsonpath_ng.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["examples/vulnerable-fastapi-app"]
addopts = "-q --cov=tenantguard --cov-report=term-missing"
